# waxy

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  justfile  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: style_merge.rs
docs/: api.md  changelog.md  extra.css  index.md  maintaining.md
plans/: ergonomic-value-types.md  initial-concept.md  measure-functions.md  slotmap-panics.md
python/wax/: __init__.py  __init__.pyi
python/waxy/: __init__.py  __init__.pyi
src/: dimensions.rs  enums.rs  errors.rs  geometry.rs  grid.rs  helpers.rs  layout.rs  lib.rs  node.rs  style.rs  tree.rs  values.rs
tests/: test_dimensions.py  test_enums.py  test_errors.py  test_geometry.py  test_integration.py  test_layout_coordinates.py  test_measure.py  test_style.py  test_tree.py  test_values.py
